part4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logoutput-ingress
  annotations:
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ingress-todofrontend-svc
            port:
              number: 1237
      - pathType: Prefix
        path: "/logs"
        backend:
          service:
            name: logoutput-svc
            port: 
              number: 1235
      - pathType: Prefix
        path: "/pingpong"
        backend:
          service:
            name: pingpong-svc
            port: 
              number: 1234
